fix: AI auto-fix for SonarCloud issues